- introduced menu for display settings. at the moment only for video.annotate - removed buttons to toggle visibilty of components in video.annotate - FIXME for expand button in swim lane. should not be focusable.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -44,6 +44,9 @@ body
   background: $dark
   border: 1px solid $darker
 
+//.q-toolbar
+//  padding: 0
+
 .q-list
   border: 0
 
@@ -96,6 +99,9 @@ body
 .ui-border-top
   border-top: 1px solid $darker
 
+.icon-color-inactive
+  color: $light
+
 .popup-shadow
   background: $medium
   -webkit-box-shadow: 0 10px 30px rgba(0,0,0,0.5)
@@ -103,6 +109,8 @@ body
   box-shadow: 0 10px 30px rgba(0,0,0,0.5)
   border: 1px solid $darker
 
+.background-black
+  background-color: $darker
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 * svg color classes
